# devninja

./: LICENSE  README.md  pyproject.toml
devninja/: __init__.py  cli.py  detector.py  dotfiles.py  installer.py  shell_config.py  vscode.py
devninja/presets/: devops.yaml  fullstack.yaml  go_backend.yaml  python_ml.yaml  react.yaml
